# tanh-ctrl

./: .gitignore  .gitmodules  LICENSE  README.md
docs/superpowers/plans/: 2026-06-10-tanh-ctrl-layered-params.md
docs/superpowers/specs/: 2026-06-10-tanh-ctrl-layered-params-design.md
src/tanh_ctrl/: CMakeLists.txt  package.xml
src/tanh_ctrl/config/: tanh_ctrl.yaml
src/tanh_ctrl/include/tanh_ctrl/: common.hpp  px4_bridge.hpp  tanh_blocks.hpp  tanh_controller.hpp  tanh_node.hpp  tools.hpp  types.hpp
src/tanh_ctrl/launch/: mujoco_sim.launch.py  real_flight.launch.py  tanh_ctrl.launch.py  tanh_ctrl_mujoco.launch.py
src/tanh_ctrl/scripts/: tanh_ctrl_param_gui.py
src/tanh_ctrl/src/: common.cpp  controller.cpp  main.cpp  node.cpp  px4_bridge.cpp  tanh_blocks.cpp  tanh_controller.cpp  tanh_node.cpp  tanh_node_main.cpp
src/traj_pub/: CMakeLists.txt  package.xml
src/traj_pub/config/: lissajous_figure8.yaml
src/traj_pub/launch/: lissajous_traj_pub.launch.py
src/traj_pub/src/: lissajous_traj_pub.cpp
src/uav_simulator/: package.xml  setup.cfg  setup.py
src/uav_simulator/config/: uav_simulator.yaml
src/uav_simulator/launch/: uav_simulator.launch.py
src/uav_simulator/models/real_x2/: scene.xml  x2_real.xml
src/uav_simulator/resource/: uav_simulator
src/uav_simulator/uav_simulator/: __init__.py  frame_transforms.py  mixer.py  mujoco_px4_bridge.py
src/utils/flat_trajectory_msgs/: CMakeLists.txt  package.xml
src/utils/flat_trajectory_msgs/msg/: FlatTrajectoryReference.msg
