<?xml version="1.0"?>
<package format="3">
  <name>traj_pub</name>
  <version>0.0.1</version>
  <description>C++ reference trajectory publisher for the tanh controller.</description>

  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>flat_trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
